# rid-lib

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
rid_lib/: __init__.py  core.py
rid_lib/types/: __init__.py
rid_lib/types/slack/: __init__.py  channel.py  user.py
src/rid_lib/: __init__.py  cache.py  consts.py  core.py  exceptions.py  manifest.py  new_core.py  old_core.py  utils.py
src/rid_lib/ext/: __init__.py  bundle.py  cache.py  effector.py  event.py  manifest.py  pydantic_adapter.py  utils.py
src/rid_lib/extensions/: event.py  manifest.py  utils.py
src/rid_lib/types/: __init__.py  discord_channel.py  discord_guild.py  discord_message.py  discord_user.py  func_query_rid.py  func_resp_rid.py  gdrive_export.py  gdrive_file.py  gdrive_file_authors.py  github_commit.py  github_event.py  github_issue.py  github_pull_request.py  github_repo.py  hackmd_note.py  http_s.py  search_query.py  search_response.py  slack_channel.py  slack_message.py  slack_team.py  slack_user.py  slack_user_group.py  slack_workspace.py  vector.py
src/rid_lib/types/slack/: __init__.py  channel.py  message.py  user.py  workspace.py
tests/: test_core.py  test_custom_type.py  test_ext_cache.py  test_ext_event.py  test_ext_manifest.py  test_prov_ctx.py  test_slack_types.py
