[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tools.setuptools.packages.find]
where = ["src"]

[project]
name = "rid-lib"
version = "0.3.0"
description = "Implementation of Reference Identifiers (RIDs)"
authors = [{name = "Luke Miller", email = "luke@block.science"}]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}