[build-system]
requires = [
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "slack-bolt==1.20.1",
    "html2text==2024.2.26",
    "flask==3.0.3",
    "setuptools==75.5.0",
    "wheel==0.45.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["rid_lib/"]
include = ["rid_lib"]

[project]
name = "rid_lib"
version = "0.0.0"

description = "rid_lib"
readme = "README.md"
requires-python = ">=3.12.5"
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "https://github.com/BlockScience/rid-lib"
Issues = "https://github.com/BlockScience/rid-lib/issues"